---------Version1 Completed---------- Design 95% waiting for log out

--- a/app/src/main/res/layout/activity_edit_shipment.xml
+++ b/app/src/main/res/layout/activity_edit_shipment.xml
@@ -24,7 +24,7 @@
         android:id="@+id/edit_shipment_item_urll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:width="300dp"
         android:height="40dp"
         android:gravity="center_vertical"
@@ -108,8 +108,8 @@
     <EditText
         android:id="@+id/edit_shipment_date"
         android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:gravity="center_vertical"
         android:hint="@string/date_word"
         android:textColor="#F3F5F6"
@@ -122,8 +122,8 @@
     <EditText
         android:id="@+id/edit_shipment_to"
         android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:gravity="center_vertical"
         android:hint="@string/to_word"
         android:textColor="#F3F5F6"
@@ -135,7 +135,7 @@
     <EditText
         android:id="@+id/edit_shipment_from"
         android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="50dp"
@@ -154,7 +154,7 @@
         android:id="@+id/edit_shipment_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:width="300dp"
         android:height="40dp"
         android:gravity="center_vertical"
