--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -9,7 +9,7 @@
     <EditText
         android:id="@+id/create_trip_last_date"
         android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="44dp"
@@ -24,7 +24,7 @@
     <EditText
         android:id="@+id/create_trip_available_weight"
         android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="44dp"
@@ -40,7 +40,7 @@
     <EditText
         android:id="@+id/create_trip_to"
         android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="44dp"
@@ -56,7 +56,7 @@
     <EditText
         android:id="@+id/create_trip_from"
         android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="180dp"
         android:layout_marginEnd="44dp"
