--- a/app/src/main/res/layout/activity_edit_profile_page.xml
+++ b/app/src/main/res/layout/activity_edit_profile_page.xml
@@ -36,6 +36,8 @@
         android:textColorHint="#FEFEFE"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:maxLines="1"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_profile_phone_edit_text" />
 
@@ -66,6 +68,8 @@
         android:textColorHint="#FEFEFE"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:maxLines="1"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_profile_email_edit_text" />
 
@@ -153,6 +157,8 @@
         android:textColorHint="#FEFEFE"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:maxLines="1"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_profile_first_name_edit_text" />
 
