--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="180dp"
-        android:layout_marginStart="40dp">
+        android:layout_marginStart="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,10 +26,9 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="0dp"
                 android:layout_toStartOf="@+id/button3"
-                android:layout_marginRight="10dp"
-                android:text="Email"
+                android:text="Email or User name"
                 android:textColor="#ffffff"/>
 
             <EditText
@@ -37,7 +36,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:width="200dp"
-                android:layout_marginLeft="47dp"
+                android:layout_marginLeft="16dp"
+                android:maxLines="1"
+                android:inputType="text"
                 android:textColor="#ffffff"/>
         </LinearLayout>
         <LinearLayout
@@ -62,6 +63,7 @@
                 android:width="200dp"
                 android:inputType="textPassword"
                 android:layout_marginLeft="20dp"
+                android:maxLines="1"
                 android:textColor="#ffffff"/>
         </LinearLayout>
 
