--- a/app/src/main/res/layout/activity_rejester.xml
+++ b/app/src/main/res/layout/activity_rejester.xml
@@ -49,9 +49,8 @@
                 android:id="@+id/textViewfirst"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="25dp"
                 android:layout_toStartOf="@+id/button3"
-                android:layout_marginRight="2dp"
                 android:text="First name"
                 android:textColor="#ffffff"/>
 
@@ -60,29 +59,35 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="4dp"
-                android:width="90dp"
+                android:width="240dp"
                 android:inputType="text"
                 android:textColor="#ffffff" />
 
-            <TextView
-                android:id="@+id/textViewsecond"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_toStartOf="@+id/button3"
-                android:layout_marginRight="2dp"
-                android:text="Second name"
-                android:textColor="#ffffff"/>
-
-            <EditText
-                android:id="@+id/et_reg_second_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:width="90dp"
-                android:inputType="text"
-                android:textColor="#ffffff" />
         </LinearLayout>
 
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_marginTop="15dp"
+         android:orientation="horizontal">
+
+         <TextView
+             android:id="@+id/textViewsecond"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginEnd="25dp"
+             android:layout_toStartOf="@+id/button3"
+             android:text="Last name"
+             android:textColor="#ffffff"/>
+
+         <EditText
+             android:id="@+id/et_reg_second_name"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:width="90dp"
+             android:inputType="text"
+             android:textColor="#ffffff" />
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,17 +98,16 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="0dp"
                 android:layout_toStartOf="@+id/button3"
-                android:layout_marginRight="10dp"
-                android:text="Name"
+                android:text="User Name"
                 android:textColor="#ffffff"/>
 
             <EditText
                 android:id="@+id/etregname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="47dp"
+                android:layout_marginLeft="16dp"
                 android:width="200dp"
                 android:inputType="text"
                 android:textColor="#ffffff" />
@@ -134,6 +138,7 @@
                 android:inputType="textPassword"
                 android:textColor="#ffffff" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
