--- a/app/src/main/res/layout/activity_shipment_deal_path.xml
+++ b/app/src/main/res/layout/activity_shipment_deal_path.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="16dp"
         android:scaleX="3"
         android:scaleY="3"
-        android:text="@string/meet_shipper_text"
+        android:text="@string/deliver_shipment_text"
         android:textColor="#FEFEFE"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,9 +111,10 @@
         android:layout_marginStart="130dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="130dp"
-        android:background="#689F38"
+        android:background="@drawable/bushape3"
         android:text="@string/rate_word"
         android:textSize="20sp"
+        android:textColor="#000"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
