--- a/app/src/main/res/layout/shipment_deal_item.xml
+++ b/app/src/main/res/layout/shipment_deal_item.xml
@@ -9,6 +9,10 @@
         android:id="@+id/shipment_deal_item_upper_part"
         android:layout_width="match_parent"
         android:layout_height="110dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:background="@drawable/bushape4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -30,8 +34,7 @@
             android:layout_height="90dp"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/shipment_deal_item_product_weight"
@@ -41,7 +44,7 @@
             android:gravity="center_horizontal"
             android:textColor="@android:color/black"
             android:textSize="15sp"
-            android:textStyle="italic|bold"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/shipment_deal_item_product_image"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="50 Kg" />
@@ -66,7 +69,7 @@
             android:layout_height="34dp"
             android:gravity="center"
             android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="@android:color/white"
+            android:textColor="#FEFEFE"
             android:textSize="17sp"
             android:textStyle="bold
 "
@@ -81,7 +84,7 @@
             android:layout_marginTop="5dp"
             android:gravity="center"
             android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="@android:color/white"
+            android:textColor="#FEFEFE"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/shipment_deal_item_product_image"
@@ -95,7 +98,7 @@
             android:layout_marginTop="5dp"
             android:gravity="center"
             android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="@android:color/white"
+            android:textColor="#FEFEFE"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/shipment_deal_item_arrow_image"
@@ -108,20 +111,24 @@
             android:layout_height="34dp"
             android:gravity="center"
             android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="@android:color/white"
+            android:textColor="#FEFEFE"
             android:textSize="17sp"
             app:layout_constraintStart_toEndOf="@+id/shipment_deal_item_product_image"
+            tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteY="75dp"
-            tools:text="Shipment date"
-            tools:ignore="MissingConstraints" />
+            tools:text="Shipment date" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="#00796B"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="3dp"
+        android:background="#05302B"
         android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shipment_deal_item_upper_part">
@@ -166,10 +173,10 @@
 
         <Button
             android:id="@+id/shipment_deal_item_status_btn"
-            android:layout_width="189dp"
-            android:layout_height="57dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="143dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/bushape"
             android:text="@string/show_step"
             android:textSize="20sp"
