--- a/app/src/main/res/layout/shipment_request_item.xml
+++ b/app/src/main/res/layout/shipment_request_item.xml
@@ -9,7 +9,10 @@
         android:id="@+id/shipment_request_item_upper_part"
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:background="#6F738A"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:background="@drawable/bushape6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -31,18 +34,17 @@
             android:layout_height="90dp"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/shipment_request_item_product_weight"
-            android:layout_width="110sp"
+            android:layout_width="110dp"
             android:layout_height="20dp"
             android:background="#90A19B9B"
             android:gravity="center_horizontal"
             android:textColor="@android:color/black"
             android:textSize="15sp"
-            android:textStyle="italic|bold"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/shipment_request_item_product_image"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="50 Kg" />
@@ -120,7 +122,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="#577898"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:background="@drawable/bushape2"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,27 +170,28 @@
 
         <Button
             android:id="@+id/shipment_request_item_status_btn"
-            android:layout_width="189dp"
-            android:layout_height="57dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="5dp"
-            android:background="#B3B4B6"
+            android:layout_width="157dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bushape5"
             android:text="@string/pending_word"
             android:textSize="20sp"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
             android:id="@+id/shipment_request_item_approve_btn"
             android:layout_width="95sp"
-            android:layout_height="60sp"
+            android:layout_height="45sp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="5dp"
-            android:background="@android:color/holo_green_light"
+            android:background="@drawable/bushape"
             android:fontFamily="sans-serif-medium"
             android:text="@string/approve_word"
+            android:textColor="@color/darkGround"
             android:textSize="12sp"
             android:textStyle="normal|bold"
             android:visibility="invisible"
@@ -197,13 +202,14 @@
         <Button
             android:id="@+id/shipment_request_item_reject_btn"
             android:layout_width="95sp"
-            android:layout_height="60sp"
+            android:layout_height="45sp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="5dp"
-            android:background="@android:color/holo_red_dark"
+            android:background="@drawable/bushape6"
             android:fontFamily="sans-serif-medium"
             android:text="@string/reject_word"
+            android:textColor="@color/darkGround"
             android:textSize="12sp"
             android:textStyle="normal|bold"
             android:visibility="invisible"
