--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -264,4 +264,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_user_name_text_view" />
 
+    <Button
+        android:id="@+id/logoutbu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Log out"
+        android:background="@drawable/bushape"
+        android:layout_marginTop="80dp"
+        android:layout_marginRight="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/profile_passport_edit_text"></Button>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
