--- a/app/src/main/res/layout/shipment_deal_item.xml
+++ b/app/src/main/res/layout/shipment_deal_item.xml
@@ -109,13 +109,14 @@
             android:id="@+id/shipment_deal_item_date"
             android:layout_width="280dp"
             android:layout_height="34dp"
+            android:layout_marginBottom="1dp"
             android:gravity="center"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="#FEFEFE"
             android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/shipment_deal_item_product_image"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="75dp"
             tools:text="Shipment date" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
